test/log/arithmetic/vwmul_vx_u32_m.txt
vwmul_vx_u32_m.c:10:2: warning: multi-line comment [-Wcomment]
   10 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vwmul_vx_u32_m.c:12:44: warning: backslash and newline separated by space
   12 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vwmul_vx_u32_m.c:31:6: warning: no previous prototype for 'vwmul_vx_u32_m_golden' [-Wmissing-prototypes]
   31 | void vwmul_vx_u32_m_golden(uint64_t *mask,uint64_t maskoff[2][8],uint32_t *a,uint32_t b,uint64_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~
vwmul_vx_u32_m.c: In function 'vwmul_vx_u32_m_golden':
vwmul_vx_u32_m.c:33:25: error: 'TODO' undeclared (first use in this function)
   33 |         exp_result[i] = TODO;
      |                         ^~~~
vwmul_vx_u32_m.c:33:25: note: each undeclared identifier is reported only once for each function it appears in
vwmul_vx_u32_m.c:31:38: warning: unused parameter 'mask' [-Wunused-parameter]
   31 | void vwmul_vx_u32_m_golden(uint64_t *mask,uint64_t maskoff[2][8],uint32_t *a,uint32_t b,uint64_t exp_result[][ELE_NUM]) {
      |                            ~~~~~~~~~~^~~~
vwmul_vx_u32_m.c:31:52: warning: unused parameter 'maskoff' [-Wunused-parameter]
   31 | void vwmul_vx_u32_m_golden(uint64_t *mask,uint64_t maskoff[2][8],uint32_t *a,uint32_t b,uint64_t exp_result[][ELE_NUM]) {
      |                                           ~~~~~~~~~^~~~~~~~~~~~~
vwmul_vx_u32_m.c:31:76: warning: unused parameter 'a' [-Wunused-parameter]
   31 | void vwmul_vx_u32_m_golden(uint64_t *mask,uint64_t maskoff[2][8],uint32_t *a,uint32_t b,uint64_t exp_result[][ELE_NUM]) {
      |                                                                  ~~~~~~~~~~^
vwmul_vx_u32_m.c:31:87: warning: unused parameter 'b' [-Wunused-parameter]
   31 | void vwmul_vx_u32_m_golden(uint64_t *mask,uint64_t maskoff[2][8],uint32_t *a,uint32_t b,uint64_t exp_result[][ELE_NUM]) {
      |                                                                              ~~~~~~~~~^
vwmul_vx_u32_m.c: In function 'main':
vwmul_vx_u32_m.c:53:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   53 |     data_init_bool(mask, exp_mask, 16, 0xffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vwmul_vx_u32_m.c:59:60: warning: passing argument 5 of 'vwmul_vx_u32_m_golden' from incompatible pointer type [-Wincompatible-pointer-types]
   59 |     vwmul_vx_u32_m_golden(exp_mask,exp_maskoff,exp_a,exp_b,exp_result);
      |                                                            ^~~~~~~~~~
      |                                                            |
      |                                                            uint64_t (*)[8] {aka long long unsigned int (*)[8]}
vwmul_vx_u32_m.c:31:98: note: expected 'uint64_t (*)[16]' {aka 'long long unsigned int (*)[16]'} but argument is of type 'uint64_t (*)[8]' {aka 'long long unsigned int (*)[8]'}
   31 | void vwmul_vx_u32_m_golden(uint64_t *mask,uint64_t maskoff[2][8],uint32_t *a,uint32_t b,uint64_t exp_result[][ELE_NUM]) {
      |                                                                                         ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
vwmul_vx_u32_m.c:66:35: error: subscripted value is neither array nor pointer nor vector
   66 |         if(exp_result[i] != result[i]) {
      |                                   ^
vwmul_vx_u32_m.c:67:79: error: subscripted value is neither array nor pointer nor vector
   67 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vwmul_vx_u32_m.c:50:18: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   50 |     uint64x8x2_t result = {0};
      |                  ^~~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmul_vx_u32_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vwmul_vx_u32_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vwmul_vx_u32_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vwmul_vx_u32_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed